<resources>
    <string name="app_name">GeoFox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_register"><u>Or Register</u></string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="or_login"><u>Or Login</u></string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="choose_your_settings">Choose your settings</string>

    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="unitsTravel">
        <item>Driving</item>
        <item>Cycling</item>
        <item>Walking</item>
    </string-array>

    <string name="access_token" translatable="false">pk.eyJ1IjoiMTgwMDU3NTMiLCJhIjoiY2s2ZzlqdmZ1MDUxbzNscDhpZmZiejV4aiJ9.ruhiRIS3IQ_ZI9zLFoLRKg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="start_navigation">Start navigation</string>
    <string name="you_haven_t_taken_any_trips_yet">You haven\'t taken any trips yet</string>
    <string name="go_to_main_screen">Go To Main Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_message">Enter message</string>
    <string name="trips_taken">Trips Taken</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="there_are_no_messages">There are no messages</string>
    <string name="destination_location">Destination Location</string>
    <string name="start_location">Start Location</string>
    <string name="date_of_trip">Date of trip</string>
    <string name="distance_of_trip">Distance of trip</string>
    <string name="duration_of_trip">Duration of trip</string>
    <string name="geofox_mapping">GeoFox Mapping</string>
    <string name="your_next_stop_is_on_us">Your next stop is on us</string>
    <string name="method_of_transport">Method of Transport</string>
</resources>