<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginView_text_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginView_ed_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView_text_Login"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginView_ed_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView_ed_Email"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginView_btnLogin"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/auth_button"
        android:fontFamily="casual"
        android:letterSpacing="0.1"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:onClick="loginUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView_ed_Password" />

    <TextView
        android:id="@+id/loginView_text_orReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/or_register"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:onClick="goToReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginView_btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>