<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsView_text_welcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text="@string/welcome_user"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/settingsView_spn_units"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:entries="@array/units"
        android:background="@android:color/holo_blue_light"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsView_text_welcomeUser" />

    <Spinner
        android:id="@+id/settingsView_spn_unitTravel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_light"
        android:entries="@array/unitsTravel"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsView_spn_units" />

    <TextView
        android:id="@+id/settingsView_text_chooseSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/choose_your_settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsView_text_welcomeUser" />

    <Button
        android:id="@+id/settingsView_btnSaveSettings"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/auth_button"
        android:fontFamily="casual"
        android:letterSpacing="0.1"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:onClick="saveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsView_spn_unitTravel" />

</androidx.constraintlayout.widget.ConstraintLayout>